// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. renders 1`] = `
.c4 {
  display: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
}

.c2 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  padding-left: 10px;
  padding-right: 10px;
}

@media (min-width:768px) {
  .c4 {
    display: inline;
  }
}

@media (min-width:768px) {
  .c1 {
    left: 0;
    right: 0;
    position: absolute;
  }
}

@media (min-width:768px) {
  .c2 {
    border-top-width: 0px;
  }
}

@media (min-width:768px) {
  .c0 {
    margin-top: 30px;
  }
}

@media (min-width:768px) {
  .c3 {
    padding-left: 0;
    padding-right: 0;
  }
}

<style>
.S1 {
  color: rgba(105,105,105,1.00);
  font-family: GillSansMTStd-Medium;
  font-size: 15px;
  padding-top: 4px;
}

.S2 {
  color: rgba(0,102,153,1.00);
  font-family: GillSansMTStd-Medium;
  font-size: 15px;
  height: 15px;
  text-align: left;
}

.S3 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  padding-top: 10px;
}

.S4 {
  color: rgba(0,102,153,1.00);
  font-family: GillSansMTStd-Medium;
  font-size: 15px;
  height: 15px;
  margin-right: 10px;
  text-align: right;
}

.IS1 {
  text-decoration: none;
}

.IS2 {
  text-decoration: none;
}
</style>

<pagination-containerweb__ContainerWithResults>
  <div
    className="c0 pagination-containerweb__ContainerWithResults-sc-1kff8us-0 c0 css-view-1dbjc4n"
  >
    <resultsweb__MessageContainer>
      <div
        className="c1 resultsweb__MessageContainer-sc-1eowhty-0 c1 css-view-1dbjc4n"
      >
        <div
          className="css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-a023e6 r-lineHeight-fxxt2n r-paddingTop-1h8ys4a S1"
          data-testid="results-message"
        >
          Showing 4 - 6 of 21 results
        </div>
      </div>
    </resultsweb__MessageContainer>
    <pagination-borderweb__BorderWithResults>
      <div
        className="c2 pagination-borderweb__BorderWithResults-sc-1tad75g-0 c2 css-view-1dbjc4n"
      >
        <responsiveweb__LinkContainer>
          <div
            className="c3 responsiveweb__LinkContainer-sc-10qy9xl-0 c3 css-view-1dbjc4n"
          >
            <a
              className="IS1"
              href="?mock-1"
            >
              <div
                className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-paddingBottom-xd6kpl r-paddingTop-m611by S3"
                data-testid="pagination-button-previous"
              >
                <div
                  className="css-text-76zvg2 r-color-j7kcqb r-fontFamily-j2s0nr r-fontSize-a023e6 r-height-14g73ha r-lineHeight-fxxt2n r-marginLeft-1n0xq6e r-textAlign-fdjqy7 S2"
                >
                  <span
                    className="css-text-76zvg2 css-textHasAncestor-16my406"
                  >
                    Previous
                    <page-labelweb__ResponsiveLabel>
                      <span
                        className="c4 page-labelweb__ResponsiveLabel-sc-1gpr097-0 c4 css-text-76zvg2 css-textHasAncestor-16my406"
                      >
                         page
                      </span>
                    </page-labelweb__ResponsiveLabel>
                  </span>
                </div>
              </div>
            </a>
          </div>
        </responsiveweb__LinkContainer>
        <responsiveweb__LinkContainer>
          <div
            className="c3 responsiveweb__LinkContainer-sc-10qy9xl-0 c3 css-view-1dbjc4n"
          >
            <a
              className="IS2"
              href="?mock-3"
            >
              <div
                className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-paddingBottom-xd6kpl r-paddingTop-m611by S3"
                data-testid="pagination-button-next"
              >
                <div
                  className="css-text-76zvg2 r-color-j7kcqb r-fontFamily-j2s0nr r-fontSize-a023e6 r-height-14g73ha r-lineHeight-fxxt2n r-marginRight-zso239 r-textAlign-1ff274t S4"
                >
                  <span
                    className="css-text-76zvg2 css-textHasAncestor-16my406"
                  >
                    Next
                    <page-labelweb__ResponsiveLabel>
                      <span
                        className="c4 page-labelweb__ResponsiveLabel-sc-1gpr097-0 c4 css-text-76zvg2 css-textHasAncestor-16my406"
                      >
                         page
                      </span>
                    </page-labelweb__ResponsiveLabel>
                  </span>
                </div>
              </div>
            </a>
          </div>
        </responsiveweb__LinkContainer>
      </div>
    </pagination-borderweb__BorderWithResults>
  </div>
</pagination-containerweb__ContainerWithResults>
`;

exports[`2. renders with no results 1`] = `
.c1 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  padding-left: 10px;
  padding-right: 10px;
}

@media (min-width:768px) {
  .c2 {
    padding-left: 0;
    padding-right: 0;
  }
}

<pagination-containerweb__ContainerWithoutResults>
  <div
    className="c0 pagination-containerweb__ContainerWithoutResults-sc-1kff8us-1 c0 css-view-1dbjc4n"
  >
    <pagination-borderweb__BorderWithoutResults>
      <div
        className="c1 pagination-borderweb__BorderWithoutResults-sc-1tad75g-1 c1 css-view-1dbjc4n"
      >
        <responsiveweb__LinkContainer>
          <div
            className="c2 responsiveweb__LinkContainer-sc-10qy9xl-0 c2 css-view-1dbjc4n"
          />
        </responsiveweb__LinkContainer>
        <responsiveweb__LinkContainer>
          <div
            className="c2 responsiveweb__LinkContainer-sc-10qy9xl-0 c2 css-view-1dbjc4n"
          />
        </responsiveweb__LinkContainer>
      </div>
    </pagination-borderweb__BorderWithoutResults>
  </div>
</pagination-containerweb__ContainerWithoutResults>
`;
